--- a/webroot/general/crm/modules/Sale/order/template/relation.xml
+++ b/webroot/general/crm/modules/Sale/order/template/relation.xml
@@ -3,7 +3,7 @@
 <page id="relation" title="相关信息">
 <block id="relation_block1" title="相关信息">
 <row id="relation_block1_row1">
-<cell id="crm_salepay" name="crm_salepay" label="收费记录" colspan="2" type="grid" tips="收费记录"></cell>
+<cell id="crm_salepay" name="crm_salepay" label="会费记录" colspan="2" type="grid" tips="会费记录"></cell>
 </row>
 </block>	
 </page>
